Fix dropdown menu hover gap

--- a/Downloads/Saani Eliasu/non-profit-charity-html-template-2024-01-13-04-19-50-utc/sadaka-buyer-file/assets/css/style.css
+++ b/Downloads/Saani Eliasu/non-profit-charity-html-template-2024-01-13-04-19-50-utc/sadaka-buyer-file/assets/css/style.css
@@ -3971,3 +3971,14 @@ input {
     box-shadow: 0 0 0 0 rgba(247, 79, 34, 0);
   }
 }
+
+/* Fix for dropdown mouse hover gap */
+.header-donate-btn .dropdown-menu::before {
+    content: "";
+    position: absolute;
+    top: -20px;
+    left: 0;
+    width: 100%;
+    height: 20px;
+    background: transparent;
+}
